--- a/assets/style.css
+++ b/assets/style.css
@@ -13,9 +13,9 @@ Button{
     font-size: 20px;
 }
 #subheader{
-    margin-left: 30%;
-    margin-right: 30%;
-    font-size: 25px;
+    margin-left: 20%;
+    margin-right: 20%;
+    font-size: 20px;
 }
 #highScoreLink_{
  float: left;
@@ -24,4 +24,29 @@ Button{
  float: right;
  margin-top: -35px;
  margin-right: 20px;
+}
+.secondPage{
+  margin-right: 100px;
+  width: 100%;
+  height: 100px;
+  text-align: center;
+  font-size: 30px;
+}
+.Answers{
+  display: flex;
+  list-style-type: none;
+  flex-direction: column;
+  width: 15%;
+  font-size: 15px;
+  margin-left: 100px;
+}
+.thirdPage{
+  margin-right: 100px;
+  width: 100%;
+  height: 100px;
+  text-align: center;
+  font-size: 30px;
+}
+.hide {
+  display: none;
 }
