--- a/assets/style.css
+++ b/assets/style.css
@@ -47,6 +47,20 @@ Button{
   text-align: center;
   font-size: 30px;
 }
+.fourthPage{
+  margin-right: 100px;
+  width: 100%;
+  height: 100px;
+  text-align: center;
+  font-size: 30px;
+}
+.fithPage{
+  margin-right: 100px;
+  width: 100%;
+  height: 100px;
+  text-align: center;
+  font-size: 30px;
+}
 .hide {
   display: none;
 }
