Created if statement to display wrong or correct depending on user input, as well as created css atributes to change display of results

--- a/assets/style.css
+++ b/assets/style.css
@@ -64,3 +64,13 @@ Button{
 .hide {
   display: none;
 }
+
+.result{
+margin-top: 200px;
+margin-left: 150px;
+color: lightgray;
+font-size: 20px;
+border-top: lightgrey;
+border-style: dashed;
+
+}
