--- a/assets/style.css
+++ b/assets/style.css
@@ -11,6 +11,7 @@ Button{
     color: white;
     border-radius: 5px;
     font-size: 20px;
+    margin: 10px;
 }
 #subheader{
     margin-left: 20%;
@@ -32,7 +33,7 @@ Button{
   text-align: center;
   font-size: 30px;
 }
-.Answers{
+#answers-ul{
   display: flex;
   list-style-type: none;
   flex-direction: column;
@@ -61,6 +62,16 @@ Button{
   text-align: center;
   font-size: 30px;
 }
+.lastPage{
+  margin-right: 100px;
+  width: 100%;
+  height: 100px;
+  text-align: center;
+  font-size: 30px;
+}
+h4{
+  margin-right: 200px;
+}
 .hide {
   display: none;
 }
@@ -71,6 +82,19 @@ margin-left: 150px;
 color: lightgray;
 font-size: 20px;
 border-top: lightgrey;
-border-style: dashed;
-
+border-top-style: dashed;
+}
+h5{
+  display: inline;
+}
+.highscorePage{
+  margin-right: 100px;
+  width: 100%;
+  height: 100px;
+  text-align: center;
+  font-size: 30px;
+  margin-top: -250px;
+}
+#highscoreList{
+ background-color: plum ;
 }
