--- a/assets/style.css
+++ b/assets/style.css
@@ -26,7 +26,7 @@ Button{
  margin-top: -35px;
  margin-right: 20px;
 }
-.secondPage{
+.allQuestions{
   margin-right: 100px;
   width: 100%;
   height: 100px;
@@ -41,27 +41,7 @@ Button{
   font-size: 15px;
   margin-left: 100px;
 }
-.thirdPage{
-  margin-right: 100px;
-  width: 100%;
-  height: 100px;
-  text-align: center;
-  font-size: 30px;
-}
-.fourthPage{
-  margin-right: 100px;
-  width: 100%;
-  height: 100px;
-  text-align: center;
-  font-size: 30px;
-}
-.fithPage{
-  margin-right: 100px;
-  width: 100%;
-  height: 100px;
-  text-align: center;
-  font-size: 30px;
-}
+
 .lastPage{
   margin-right: 100px;
   width: 100%;
@@ -93,8 +73,7 @@ h5{
   height: 100px;
   text-align: center;
   font-size: 30px;
-  margin-top: -250px;
-}
-#highscoreList{
+  
+  border: solid 5px black;
  background-color: plum ;
 }
