Completed  the functionality of the webpage by adding local storages to js file and made everything look nice with the css file, as well as adding the required text to the readme file

--- a/assets/style.css
+++ b/assets/style.css
@@ -73,7 +73,10 @@ h5{
   height: 100px;
   text-align: center;
   font-size: 30px;
-  
-  border: solid 5px black;
- background-color: plum ;
+}
+h6{
+  background-color: plum ;
+  opacity: 50%;
+  margin-left: 600px;
+  margin-right: 600px;
 }
